更新文件结构

--- a/CRM信息/全流程 纷享销客--05.03.md
+++ b/CRM信息/全流程 纷享销客--05.03.md
@@ -4,7 +4,7 @@
 
 ![img](image-1683105853581.png)
 
-![img](image-1683105849458.png)
+![img](image/1683105849458.png)
 
 ### 广告营销
 
@@ -14,7 +14,7 @@
 
  已支持接入广告平台 ： 百度营销 、 巨量引擎 （ 头条、抖音 ）、 腾讯广告 
 
-![img](image-1683108809244.png)
+![img](image/1683108809244.png)
 
 ![img](https://saas.bk-cdn.com/t/e77d24d5-3d21-4bbc-8ec5-886214579a51/u/c5c2f451-c4f9-4376-9167-e187899f2de3/1658837941575/image.png)
 
@@ -54,17 +54,17 @@
 
 ## 销售
 
-![1683114958167](1683114958167.png)
+![1683114958167](image/1683114958167.png)
 
 leads潜在客户，MQL表达兴趣并符合要求的客户，SQL确定有购买意向的客户
 
-![1683114777422](1683114777422.png)
+![1683114777422](image/1683114777422.png)
 
 
 
-![1683114826608](1683114826608.png)
+![1683114826608](image/1683114826608.png)
 
-![1683115149348](1683115149348.png)
+![1683115149348](image/1683115149348.png)
 
 ![img](https://saas.bk-cdn.com/t/e77d24d5-3d21-4bbc-8ec5-886214579a51/u/00a35f0d-d467-4f2d-9706-7ba1da40f346/1660186088255/%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.png)
 
