--- a/CRM信息/纷享销客-功能纪录.md
+++ b/CRM信息/纷享销客-功能纪录.md
@@ -2,11 +2,11 @@
 
 ## CRM核心需求
 
-<img src="1683182042767.png" alt="1683182042767" style="zoom:50%;" />
+<img src="image/1683182042767.png" alt="1683182042767" style="zoom:50%;" />
 
 预计使用端口数量？？
 
-![1683198224635](1683198224635.png)
+![1683198224635](image/1683198224635.png)
 
 ai智能客户推荐
 
@@ -27,3 +27,6 @@ ai智能客户推荐
 商机
 
 销售
+
+
+
