--- a/CRM信息/纷享销客-数据分析.md
+++ b/CRM信息/纷享销客-数据分析.md
@@ -21,6 +21,39 @@
 
 5.AI智能客户推荐
 
+### 业务流程：
+
+![1683276465954](image/1683276465954.png)
+
+### 销售自动化【重点】
+
+- 客户（公海）/ 财务信息、地址信息 / 客户账户、预存款、返利
+  - 公海
+    - 实现资源共享，调动员工积极性
+  - 分配
+    - 推拉式
+    - 收回
+  - 跟进【弱】
+    - 流程
+  - 转化
+    - 订单
+- 联系人
+- 商机（销售流程）
+  - 销售流程：规范跟进商机过程中的动作（要求和反馈），标准化销售过程，下举例：
+    - 验证客户：要求-打电话（话术），反馈-电话记录
+    - 确认需求：要求-拜访客户，反馈-拜访记录、客户需求
+    - 方案/报价：要求-出方案和报价，反馈-报价单
+    - 赢单：生成订单
+    - 输单：原因、竞品
+    - 无效
+  - 销售漏斗：查看各阶段转化率、优化流程
+- 报价单
+- 合同、销售订单（订单产品）/退货单（退货单产品）/促销
+- 回款（回款明细）、回款计划 /退款
+- 开票
+- 拜访、盘点
+- 产品、价目表（价目表明细）
+
 
 
 # 销售总监
