--- a/记事本.md
+++ b/记事本.md
@@ -2,3 +2,25 @@
 
 新员工产品培训.pptx 第28页客户服务管理暂时跳过
 
+网页版链接跳转右键新页面都会失效
+
+ （Salesforce，云苍穹，Siebel，Dynamics） 优秀平台
+
+业务流程
+
+开发流程
+
+熟悉业务
+
+设计流程
+
+设计指标
+
+
+
+任务：
+1.学习saleforce，ai模块 ，去分析具体的功能
+
+2.设计用户的业务流程，开发流程
+
+3.设计指标
