--- a/Einstein 单元分析/模型设计.md
+++ b/Einstein 单元分析/模型设计.md
@@ -4,3 +4,7 @@
 
 AUTOML
 
+H2O autoML  [欢迎使用 H2O 3 — H2O 3.32.1.7 文档 (h2o-release.s3.amazonaws.com)](https://h2o-release.s3.amazonaws.com/h2o/rel-zipf/7/docs-website/h2o-docs/welcome.html#new-users) 
+
+开源 [ Apache-2.0 license](https://github.com/h2oai/h2o-3/blob/master/LICENSE) 
+
