--- a/记事本.md
+++ b/记事本.md
@@ -24,3 +24,9 @@
 2.设计用户的业务流程，开发流程
 
 3.设计指标
+
+
+
+这组数据超过了0.75，但是无法复现 64，64，128，全relu全layers.BatchNormalization()
+
+![1683542878094](image/1683542878094.png)
