--- a/记事本.md
+++ b/记事本.md
@@ -1,3 +1,7 @@
+
+
+
+
  [纷享销客 (fxiaoke.com)](https://www.fxiaoke.com/XV/UI/Home#netdisk)  网页端使用手册 3版 产品名称有错别字
 
 新员工产品培训.pptx 第28页客户服务管理暂时跳过
@@ -30,3 +34,8 @@
 这组数据超过了0.75，但是无法复现 64，64，128，全relu全layers.BatchNormalization()
 
 ![1683542878094](image/1683542878094.png)
+
+魔数平台，新建数据集，当数据集csv中含有TRUE和FLASE会自动删除此字段。
+
+
+
