--- a/意向打标签/相关字段分析.md
+++ b/意向打标签/相关字段分析.md
@@ -41,3 +41,13 @@
 2.思路：落地实现的思路
 
 3.根据思路需求的数据：1.业务的数量输入 2.场景 3. 字段数据
+
+
+
+
+
+## 初步结论
+
+![1683806171270](image/1683806171270.png)
+
+需对CRM核心要求进一步拆分、企业规模拆分，模型初步表现准确率只有80%不到，神经网络过拟合严重测试集表现仅有73%，初步断定数据筛选存在问题。发现，提供的数据经过空白行删除，破坏了原有的数据结构。
