--- a/记事本.md
+++ b/记事本.md
@@ -35,3 +35,10 @@
 
 问题：H2O 中
 
+
+
+
+
+ [TensorFlow Decision Forests (google.cn)](https://tensorflow.google.cn/decision_forests?hl=zh-cn) 
+
+ [LightGBM 详细讲解 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/366952043) 
