--- a/意向打标签/相关字段分析.md
+++ b/意向打标签/相关字段分析.md
@@ -51,3 +51,14 @@
 ![1683806171270](image/1683806171270.png)
 
 需对CRM核心要求进一步拆分、企业规模拆分，模型初步表现准确率只有80%不到，神经网络过拟合严重测试集表现仅有73%，初步断定数据筛选存在问题。发现，提供的数据经过空白行删除，破坏了原有的数据结构。
+
+## 字段转化数值记录
+
+企业规模： 0-4人：2，5-9人：7，10-19人：15，20-49人:31，50-99:75，1-99:50，100-299:200，300-999：750，1000以上：1100
+
+![1684138089612](image/1684138089612.png)
+
+
+
+![1684138112238](image/1684138112238.png)
+
