--- a/记事本.md
+++ b/记事本.md
@@ -42,3 +42,20 @@
  [TensorFlow Decision Forests (google.cn)](https://tensorflow.google.cn/decision_forests?hl=zh-cn) 
 
  [LightGBM 详细讲解 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/366952043) 
+
+C:\Users\17537\h2oflows\model\StackedEnsemble_BestOfFamily_leads05.11.model
+
+
+
+最终人为增加时间线索时间惩罚项
+
+CEO、CIO、CFO、COO、CTO、CKO、CLO、总监、主管、主任、首席、经理、总监、manager、president、boss主管、head、CMO、所长、GM、Director、总裁
+
+副总、部长、科长，副理、处长、院长、厂长、创始人、店长、理事长、法人、总师
+
+（总裁助理是否要扣分，副）
+
+？？顾问、课长、秘书长、、高层管理人员、企划、股东、负责人、监事、专家？总助
+
+HE2,HA2,GW2,GQ2,FX2,X2,W2,Q2,P2,O2,N2,K2,J2
+
