--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -24,3 +24,27 @@ C:\Users\17537\Downloads\StackedEnsemble_BestOfFamily_AutoML_20230511_205642.zip
 
 ![1683885325898](image/1683885325898.png)
 
+## windows 4模型 2w8数据
+
+C:\Users\17537\Desktop\export\h2o-windows0516
+
+```
+# 11982fb57507.csv  新2w8模型 测试集表现
+```
+
+MSE为0.171229
+划分线为0.349时，召回率0.9239，准确率0.7346
+划分线为0.555时，召回率0.8216，准确率0.7508
+
+## Linux 5模型 2w8数据
+
+C:\Users\17537\Desktop\export\h2o-linux0516
+
+```
+# d352cce6c585      Linux 全模型
+```
+
+MSE为0.168733
+
+
+
