--- a/记事本.md
+++ b/记事本.md
@@ -62,3 +62,13 @@ HE2,HA2,GW2,GQ2,FX2,X2,W2,Q2,P2,O2,N2,K2,J2
 召回率  准确人
 
 0.006567599 0.341780184293192
+
+如何
+
+
+
+多维打分，区分客户意向和购买潜力，
+
+业务转周报，分析为主
+
+跟进时间？？？跟转化率？？
