--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -8,6 +8,12 @@
 
 先按照程度分5类标签代表从低到高的成单概率，去测试集中计算此类预测标签的数据成单概率，概率是否单增，概率增长的斜率是否均匀，作为标签好坏的评判标准。
 
+评判程序：C:\Users\17537\Documents\python\Edison\评估模型.py
+
+
+
+
+
 ## h2O autoML模型评估
 
 C:\Users\17537\h2oflows\model\StackedEnsemble_BestOfFamily_leads05.11.model
@@ -45,6 +51,12 @@ C:\Users\17537\Desktop\export\h2o-linux0516
 ```
 
 MSE为0.168733
+
+
+
+
+
+
 
 
 
