--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -10,9 +10,9 @@
 
 评判程序：C:\Users\17537\Documents\python\Edison\评估模型.py
 
+![1685020859165](image/1685020859165.png)
 
-
-
+以AUC和MSE作为统一评判标准
 
 ## h2O autoML模型评估
 
