--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -52,11 +52,21 @@ C:\Users\17537\Desktop\export\h2o-linux0516
 
 MSE为0.168733
 
+## 2021数据表现 （2020模型）
+
+```
+# 27320_199_20230529175050   2021新数据-数魔GBM模型（去除职务）
+# 27321_146_20230529182722   2021新数据-删除新数据没有的字段重新训练-数魔GBM
+# 27322_160_20230529191455   2021新数据-删除新数据没有的字段重新训练-数魔DART
+```
+
+详见文件夹，此处列举最后一个模型的表现
 
 
 
+![评分-成功率 散点图](image/评分-成功率 散点图.png)
 
+![roc_curve曲线](image/roc_curve曲线.png)
 
-
-
+![样本评分分布直方图](image/样本评分分布直方图.png)
 
