--- a/意向打标签/相关字段分析.md
+++ b/意向打标签/相关字段分析.md
@@ -56,6 +56,10 @@
 
 企业规模： 0-4人：2，5-9人：7，10-19人：15，20-49人:31，50-99:75，1-99:50，100-299:200，300-999：750，1000以上：1100
 
+=IF(Q2="1-99人",50,IF(Q2="0-4人",2,IF(Q2="5-9人",7,IF(Q2="10-19人",15,IF(Q2="20-49人",31,IF(Q2="50-99人",75,IF(Q2="100-299人",200,IF(Q2="300-999人",750,IF(Q2="1000人及以上",1100,"")))))))))
+
+
+
 ![1684138089612](image/1684138089612.png)
 
 
