--- a/意向打标签/魔数智擎功能分析.md
+++ b/意向打标签/魔数智擎功能分析.md
@@ -1,14 +1,4 @@
-## 基础知识介绍
 
-### 1.模型衡量指标
-
-**loss值**：**衡量预测值与实际值差距的量**，具体模型loss值计算公式可能不同，越小代表模型与实际更加接近，越大代表偏差越大。下面三个均为loss值的具体公式。
-
-**MSE、MAE、RMSE、MAPE**：平均方差、平均绝对值差，平均方跟差、平均绝对百分比误差。这四个指标均为衡量模型loss值的公式，MSE没有直观的能力描述，是综合了抖动大小和偏差率的一个量，**MAE代表模型表现能力准确性**，RMSE是MSE的平方根，一般情况下用来和MAE做比较，若**MAE与RMSE的差距越大则模型浮动越大**（示例：2批零件良品率均为95%，但是第一批不良品中尺寸浮动±5%，第二批不良品中浮动±10%，则第二批浮动大，RMSE与MAE的差即形容浮动程度的量）,MAPE相当于MAE相对于正确值的百分比，由于真实值存在0所以一般不采用。
-
- **R²**：衡量线性回归中自变量对于因变量的解释程度，也就是**衡量模型因变量总体与预测值的相关度**取值范围[0,1)，自变量越多相关性自然越高，因此为了增加模型变量的有效率，常用R²adjust来形容。
-
-**PSI**：群体稳定性指标，是验证样本集（val_dateset）在各分数段的分布与建模样本（train_dateset）分布的差异。此指标是用来分析**验证样本集是否能代表此类数据**的一个指标。(0,0.1] 好(0.1,0.25] 一般(0.25,+∞) 验证样本集不能代表此类数据。此项数据出现问题一般只因为数据集太小，随机抽出的测试样本集过少（过多也可能但是一般测试集小于训练集不会出现过多的情况）
 
 ### 2.包含的模型种类
 
@@ -19,6 +9,8 @@ RF
 DART
 
 GOSS
+
+ [christophM/rulefit: Python implementation of the rulefit algorithm (github.com)](https://github.com/christophM/rulefit) 
 
 
 
