--- a/记事本.md
+++ b/记事本.md
@@ -73,7 +73,10 @@ HE2,HA2,GW2,GQ2,FX2,X2,W2,Q2,P2,O2,N2,K2,J2
 
 跟进时间？？？跟转化率？？
 
+```
+http://meet.firstshare.cn/meet/day.php?year=2023&month=05&day=29&area=15&room=57
+```
 
+=COUNTBLANK(D2:L2)+COUNTBLANK(N2)+COUNTBLANK(Q2)+COUNTBLANK(E2)+1+COUNTBLANK(I2)
 
-
-
+颐和园（大会议室预定）
