--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -70,3 +70,18 @@ MSE为0.168733
 
 ![样本评分分布直方图](image/样本评分分布直方图.png)
 
+## 自建xgb dart模型
+
+```python
+model = xgb.XGBClassifier(learning_rate = 0.1,n_estimators= 200,max_depth=12,min_child_weight=0.2,subsample= 0.8,colsample_bytree=0.8,colsample_bylevel=0.8,colsample_bynode=0.8,booster='dart',eval_metric = ["auc"],rate_drop= 0.1,         skip_drop= 0.5,n_jobs=0)
+```
+
+auc = 0.8098297356655982  mse= 0.1904168151050944
+t-auc = 0.8270055242556855  t-mse= 0.1742421993290384
+
+```python
+model = xgb.XGBClassifier(learning_rate = 0.1,n_estimators= 200,max_depth=5,min_child_weight=0.8,subsample= 0.8,colsample_bytree=0.8,colsample_bylevel=0.8,colsample_bynode=0.8,booster='dart',eval_metric = ["auc"],rate_drop= 0.2,skip_drop= 0.5,n_jobs=0)
+```
+
+v-auc = 0.9361349063906873  v-mse= 0.09606747600336334
+
