--- a/意向打标签/会议记录.md
+++ b/意向打标签/会议记录.md
@@ -1,1 +1,25 @@
-![222b7cfe3c8cbef6c71e8a409066be5](image/222b7cfe3c8cbef6c71e8a409066be5.jpg)
+
+
+## 5.31进度报告
+
+1.不同模型选型对比报告（评判标准难定）
+
+2.建立选用平台和自研的评判标准（5个因素作为参考依据「效果」「模型构建效率」「租户间泛化的建模效率」「客户综合体验」「跨租户的泛化性」）
+
+3.对魔数智擎做深度的研究
+
+4
+
+ 
+
+
+
+
+
+问题
+
+1.关于可解释性工作何时进行（与选取模型强相关暂时看不可通用解释）
+
+2.对于模型评判标准的判定
+
+3.模型如若上线，如何评判有效？
