--- a/意向打标签/魔数智擎功能分析.md
+++ b/意向打标签/魔数智擎功能分析.md
@@ -16,3 +16,11 @@ GOSS
 
 
 
+## 2.1数魔平台可解释性方案
+
+1.Rule Generator 模块
+
+使用了GBM模型，之后采用GBM模型中提取决策树分支构建规则集，按照提升度排序选取前300条规则，规则就是决策树的子节点路径。这些规则仅作为画像参考并不能在模型中体现，不提供规则集建立的模型（效果也不好，等效于一颗决策树）。
+
+2.变量重要性分析
+
