--- a/记事本.md
+++ b/记事本.md
@@ -80,3 +80,31 @@ http://meet.firstshare.cn/meet/day.php?year=2023&month=05&day=29&area=15&room=57
 =COUNTBLANK(D2:L2)+COUNTBLANK(N2)+COUNTBLANK(Q2)+COUNTBLANK(E2)+1+COUNTBLANK(I2)
 
 颐和园（大会议室预定）
+
+
+
+
+
+
+
+
+
+
+
+
+
+1.效果
+
+2.建模效率
+
+3.产品化
+
+4.客户综合体验
+
+5.跨
+
+
+
+展示模型
+
+转化周期。
