--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -85,3 +85,10 @@ model = xgb.XGBClassifier(learning_rate = 0.1,n_estimators= 200,max_depth=5,min_
 
 v-auc = 0.9361349063906873  v-mse= 0.09606747600336334
 
+```python
+model = xgb.XGBClassifier(learning_rate = 0.1,n_estimators= 200,max_depth=5,min_child_weight=0.5,subsample= 0.4,colsample_bytree=0.4,colsample_bylevel=1,colsample_bynode=1,booster='dart',eval_metric = ["auc"],rate_drop= 0.2,         skip_drop= 0.5,n_jobs=0)
+```
+
+auc = 0.7972628954545773  mse= 0.1776743534280504
+t-auc = 0.8078150355248903  t-mse= 0.17277785112610514
+v-auc = 0.941725547040536  v-mse= 0.09375560754467602
