--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -92,3 +92,40 @@ model = xgb.XGBClassifier(learning_rate = 0.1,n_estimators= 200,max_depth=5,min_
 auc = 0.7972628954545773  mse= 0.1776743534280504
 t-auc = 0.8078150355248903  t-mse= 0.17277785112610514
 v-auc = 0.941725547040536  v-mse= 0.09375560754467602
+
+```python
+model = GradientBoostingClassifier(n_estimators=200,learning_rate=0.05,max_depth=5,min_samples_leaf=5,subsample=0.8,verbose=1,max_leaf_nodes=10,max_features=None,random_state=2)
+```
+
+auc = 0.7942036703338692  mse= 0.1785720820152633  拟合曲线偏差度: 0.03007728540566959  正偏差度: 0.027218538025492702  负偏差度： 0.03265015804782879  recall: 0.8528028933092224  f1: 0.7631067961165048   GBM2020test
+auc = 0.8037302154426681  mse= 0.17449893353396087  拟合曲线偏差度: 0.036953368284927735  正偏差度: 0.034028569837726334  负偏差度： 0.039585686887409  recall: 0.8624672863459977  f1: 0.7670760093105387   GBM2020train
+auc = 0.9347305430822543  mse= 0.09148577346014138  拟合曲线偏差度: 0.13570694950051757  正偏差度: 0.12171029101461346  负偏差度： 0.14970360798642166  recall: 0.8489049944855838  f1: 0.7878344787249598   GBM2021
+
+GBM_1
+
+```
+model = GradientBoostingClassifier(n_estimators=200,learning_rate=0.05,max_depth=5,min_samples_leaf=5,subsample=0.8,verbose=1,max_leaf_nodes=10,max_features=None,random_state=2)
+```
+
+
+
+```
+model = GradientBoostingClassifier(n_estimators=200,learning_rate=0.05,max_depth=5,min_samples_leaf=3,subsample=0.8,verbose=1,max_leaf_nodes=10,max_features=None,random_state=2)
+```
+
+
+
+```
+model = GradientBoostingClassifier(n_estimators=200,learning_rate=0.05,max_depth=5,min_samples_leaf=7,subsample=0.8,verbose=1,max_leaf_nodes=10,max_features=None,random_state=2)
+```
+
+
+
+
+
+
+
+
+
+
+
