--- a/意向打标签/模型评判.md
+++ b/意向打标签/模型评判.md
@@ -123,9 +123,9 @@ model = GradientBoostingClassifier(n_estimators=200,learning_rate=0.05,max_depth
 
 
 
+final_score= 0.8939723114 auc= 0.9478229708  mse= 0.0787599685  拟合曲线偏差度:0.0992286288  正偏差度:0.0660550599  负偏差度:0.1324021977  recall:0.8725382070  f1:0.8060548723   automl\GBM_AutoMl_5424
 
-
-
+[5424, 0.8939723114318794, 0.07750000000000001, 6, 5, 0.75, 9]
 
 
 
