--- a/意向打标签/汇总.md
+++ b/意向打标签/汇总.md
@@ -21,3 +21,22 @@
 | 目前尝试的模型表现 | 最优算法Magic GBM AUC 80.3%                                  | 最优算法 综合5种模型的StackedEnsembleAUC 80.1%               | 深度神经网络（出现严重过拟合）AUC 73.2%                      |
 
 
+
+
+
+## 现存可能的问题
+
+1. 模型轮数并未选择最优轮数
+
+
+
+
+
+流程：
+
+1.初步筛选特征
+
+2.划分训练集和测试集
+
+3.训练集表现分析（是否存在过拟合）如果存在过拟合，则考虑限制较高的模型，如果训练集表现一般则继续优化超参数，如果训练集表现过差，合并训练集和测试集再次尝试，不具备参考价值
+
