--- a/意向打标签/特征筛选.md
+++ b/意向打标签/特征筛选.md
@@ -4,7 +4,7 @@
 - Chi-Square：卡方检验，就是统计样本的实际观测值与理论 推断值之间的偏离程度，实际观测值与理论推断值之间的偏 离程 度就决定卡方值的大小，卡方值越大，越不符合；卡 方值越小，偏差越小，越趋于符合。
 
 
- 
+
 
 有不少特征筛选和特征过滤的共性，主要的特点就是通过不同的方法去计算不同特征对于模型的贡献。
 
@@ -27,3 +27,13 @@
 **互信息法**
 
 互信息系数能够很好地度量各种相关性，但是计算相对复杂一些，互信息计算公式如下：
+
+
+
+
+
+
+
+## 注意事项
+
+训练集样本分布情况及其影响实验结果
