--- a/意向打标签/模型可解释性.md
+++ b/意向打标签/模型可解释性.md
@@ -96,7 +96,7 @@ disp4 = PartialDependenceDisplay.from_estimator(tree_model, val_X, f_names, ax=a
 plt.show()
 ```
 
- ![img](https://www.kaggleusercontent.com/kf/126573587/eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..X8LGbh2ow_lcl1qrjdEkrw.6ecLj9aUjEgPTRkrJNTAr0wpIuBsgeYWnFafNzgUELZamfHBOnc9h3P4ght-HMjUO30B_uNxiT-qPbeQ5Aj-59ppVwzN6DfJA7uoRhyzySI9YE3Jo71Zr_YsWTBKBG6dap7vkqISOjqNKOKm0NFhZHFRAfAHeSwHz_4dvuAftfy8h6mZLnXr9Iiy7ndc6XJluhDJ4RlCr13eKPz1fulAx5c5oRPaUwwotsjnp6oTBuMfnEFwfhfs9gRtzg3tiwRAtU8C2IKKeX51BCxZNQncHGN6yHq0s7gRmycPGSRaZ8r0nC8yB0VKN25zpHQSu9W86Yc4uQI7q16cY0JhvD-uRIqbgimP8W1yOzXJ_wt-eiHyw7xW7Kce9ysITa7BCxPyGdKYHnyQSmYw7nYzIS9ZVlzLMGswxl6piFTilgu6_9I7VefBiiLzextcxes1qJdenLMQhGdbUzrebk0rKhWwop8TpFFCAy2AtTlWAGOfIkeyWYxPM_8Kynm4uVFyQIB8iIsJEYKtfPWo52WNxQ5N0gw9XSTnEPwvDdGpfxNGCG36CiQeV8Ey44N8AzPuQtjqrLTEUfveFHUI9FD9sHp8eMSTmctX4gonKGm02MghCJeYK1Bl0XJ4nDKLnQz86HMwQ_DoScqfqa9hXho-8X_eQg.PZ89cwSGUwnn9jBTeSzZZw/__results___files/__results___12_0.png)
+ ![img](image/__results___12_0.png) 
 
  对应多变量归因
 
