--- a/意向打标签/魔数智擎功能分析.md
+++ b/意向打标签/魔数智擎功能分析.md
@@ -1,30 +1,35 @@
+## 模型快速搭建
 
+### 二分类模型
 
-### 2.包含的模型种类
+![1686648457404](image/1686648457404.png)
 
-GBM
+#### 建模
 
-RF
+![1686651788314](image/1686651788314.png)
 
-DART
+下面只写了参考文档里没有的算法
 
-GOSS
+##### X DeepFM
 
- [christophM/rulefit: Python implementation of the rulefit algorithm (github.com)](https://github.com/christophM/rulefit) 
+##### DeepFM
 
+##### SVM
 
+##### lightGBM
 
+##### MODELFUSION_STACKING
 
-
-## 2.1数魔平台可解释性方案
-
-1.Rule Generator 模块
-
-使用了GBM模型，之后采用GBM模型中提取决策树分支构建规则集，按照提升度排序选取前300条规则，规则就是决策树的子节点路径。这些规则仅作为画像参考并不能在模型中体现，不提供规则集建立的模型（效果也不好，等效于一颗决策树）。
-
-2.变量重要性分析
-
-## 3. 特征集筛选
+##### AutoML
 
 
 
+#### 超级自动化建模
+
+#### 模型对比
+
+### 回归模型
+
+### 多分类模型
+
+### 聚类
