--- a/意向打标签/会议记录.md
+++ b/意向打标签/会议记录.md
@@ -10,7 +10,15 @@
 
 4
 
- 
+ 440 /212 ge 
+
+
+
+2020 77.4%
+
+2021 74.4%
+
+2023 73.0%
 
 
 
@@ -24,3 +32,8 @@
 
 3.模型如若上线，如何评判有效？
 
+
+
+## 6.13进度报告
+
+模型评判
