--- a/意向打标签/会议记录.md
+++ b/意向打标签/会议记录.md
@@ -36,4 +36,46 @@
 
 ## 6.13进度报告
 
-模型评判
+AI 1.0例会
+
+1.多行业都会有不同的转换周期，后期需要具备灵活配置
+2.模型选型结论：采用自研单模型，内部跑，基于相关效果，基于用户回访和调研  @王漪萌
+3.一期上线的展示，默认不做具体显示，显示规则先模糊体现（把0的模糊掉，展示具体的分数）
+
+后续待办
+1.漪萌负责交互这边的产品化设计
+2.关于算法的工程化设计，如要考虑实现方案
+3.产品架构图卓林这边辛苦设计一下
+4.调研下市面上有没有多特征组合的特征工程经验
+5.内部调研下xsy目前的AI账号 @王漪萌
+6.AI未来需要考虑如何定义每个阶段，以及每个阶段如何去运营、推广，评估下是否有负面影响，如何有，如果把风险降到最低
+7.魔数会把特征中的时间全部筛选掉，这块需要调研一下@贺卓林
+
+
+
+【会议结论】
+
+暂定使用单模型上线FS，使用旧版可解释性界面对接，不显示特征字段为空的贡献值
+
+继续研究特征筛选、融合方案，询问魔数智擎相关解决方案。
+
+进一步设计算法工程化方案，以及产品架构图
+
+【后续ToDo】
+
+调研目前销售易线索评分方案，对AI产品进行风险评估以及运营推广的规划@王漪萌  +「两周内」
+
+FS内部上线模型开始试用 @王漪萌@贺卓林@郑子阳  +「两周内」
+
+算法工程化设计，产品架构图设计@徐司宇@贺卓林 + 「两周内」
+
+特征自动化筛选以及特征融合方面探索@贺卓林 + 「长期完成」
+
+制定评分上线后的评判标准以及反馈修改模型 @王漪萌@贺卓林 + 「长期完成」
+
+线索评分交互的产品化设计 @王漪萌  +「长期完成」
+
+
+
+
+
