--- a/意向打标签/特征筛选.md
+++ b/意向打标签/特征筛选.md
@@ -37,3 +37,90 @@
 ## 注意事项
 
 训练集样本分布情况及其影响实验结果
+
+
+
+
+
+线索等级 linear value is : 0.5554472104186171
+归属部门 linear value is : -0.5979686462975358
+线索阶段 linear value is : -0.7069689471393636
+线索评分 linear value is : -0.5555240933018109
+负责人主属部门 linear value is : -0.6065119640627256
+转换时间 linear value is : -0.6752921998658405
+是否超时 linear value is : -0.5301726934771288
+状态 linear value is : 1.0
+锁定状态 linear value is : -0.7944883887583826
+
+
+
+
+
+预期上线时间 linear value is : -0.6327946874688931
+注册资金-新 linear value is : -0.6133650207684707
+联系人查重 linear value is : -0.635226124405404
+汇聚查重 linear value is : -0.6386682867090907
+转MQL时间 linear value is : -0.5840126443071192
+线索等级 linear value is : 0.7245066217579524
+MQL分配部门 linear value is : -0.5338429610200921
+预算明确 linear value is : -0.6334360802080972
+MQL分配人员 linear value is : -0.5183802758530066
+客户查重 linear value is : -0.5838821566533103
+转MQL时间-系统 linear value is : -0.5575491444393289
+归属部门 linear value is : -0.5131765157026829
+国家 linear value is : -0.5761547201565127
+线索阶段 linear value is : -0.862636309312805
+线索评分 linear value is : -0.7507295846784514
+工商注册 linear value is : -0.63901349375316
+负责人主属部门 linear value is : -0.5203361919874924
+转换时间 linear value is : -0.8500540611900123
+状态 linear value is : 1.0
+锁定状态 linear value is : -0.999364947545825
+
+
+
+```
+spearman相关性算法
+```
+
+是否为关键联系人 linear value is : 0.26138665108696657
+**备注 linear value is : -0.7071067811865475**
+销售姓名 linear value is : -0.2764960865648515
+伙伴企业_唯一性ID linear value is : -0.24322485575857355
+伙伴企业 linear value is : 0.38221048762061555
+三级行业价值链经营目标库 linear value is : -0.41275945824459354
+CSM负责人 linear value is : -0.24609510653842565
+线索转移线索池原因 linear value is : 0.4318287611017851
+**线索类别 linear value is : 0.9999999999999999**？？？？？？？？？？？？
+**线索等级 linear value is : 0.7160967459333406**
+企微客户_唯一性ID linear value is : -0.22473328748774737
+销售人员 linear value is : -0.29225271355603294
+**归属部门 linear value is : -0.6001104258910692**
+线索有效性 linear value is : -0.329693917307517
+贵公司是否是纷享销客CRM用户 linear value is : 0.32519359272526954
+推广方式 linear value is : 0.29898845789635115
+定位 linear value is : 0.29172846881594927
+详细地址 linear value is : 0.24369610232074557
+**线索阶段 linear value is : -0.883962451**
+
+
+
+
+
+
+
+**9739813**
+线索评分 linear value is : -0.5309784174213459
+**工商注册 linear value is : -0.6390134937531593**
+创建人 linear value is : 0.20127762290381546
+负责人 linear value is : 0.2859048398620289
+**负责人主属部门 linear value is : -0.6003763279639879**
+合作伙伴_唯一性ID linear value is : 0.3124723783712416
+外部负责人 linear value is : 0.20775931154121308
+线索池 linear value is : 0.2953565807258213
+是否超时 linear value is : -0.2681614066861037
+最后跟进人 linear value is : 0.302233521900671
+状态 linear value is : 1.0
+**锁定状态 linear value is : -0.9993649475458264**
+
+ [(45条消息) XGBoost之类别特征的处理_xgboost 类别特征_a flying bird的博客-CSDN博客](https://blog.csdn.net/m0_37870649/article/details/104550054) 
