--- a/意向打标签/特征筛选.md
+++ b/意向打标签/特征筛选.md
@@ -124,3 +124,28 @@ CSM负责人 linear value is : -0.24609510653842565
 **锁定状态 linear value is : -0.9993649475458264**
 
  [(45条消息) XGBoost之类别特征的处理_xgboost 类别特征_a flying bird的博客-CSDN博客](https://blog.csdn.net/m0_37870649/article/details/104550054) 
+
+## kaggle多特征融合
+
+1. ranking with a **feature utility metric** 
+
+2.  a function measuring associations between a feature and the target. 
+
+这些需要被考虑
+
+#  Mutual Information Scores
+
+MI only for integer dtypes 
+
+```
+from sklearn.feature_selection import mutual_info_regression
+
+def make_mi_scores(X, y, discrete_features):
+    mi_scores = mutual_info_regression(X, y, discrete_features=discrete_features)
+    mi_scores = pd.Series(mi_scores, name="MI Scores", index=X.columns)
+    mi_scores = mi_scores.sort_values(ascending=False)
+    return mi_scores
+
+mi_scores = make_mi_scores(X, y, discrete_features)
+mi_scores[::3]  # show a few features with their MI scores
+```
