--- a/意向打标签/汇总.md
+++ b/意向打标签/汇总.md
@@ -1,42 +1,119 @@
-# 前言
+# 1 特征筛选
 
-初步尝试了使用，H2OautoML（开源自动机器学习算法），魔数智擎，tensorflow深度神经网络，三个平台对比测试。初步以测试集的AUC和MSE为评判标准。
+## 1.1 去除100%不可用特征
 
-# 数据准备
+### 1.1.1 根据类别字段是否过于细分的类别去除
 
-唯一性ID（必填）,姓名（必填）,公司名称（必填）,企业性质,手机号,邮件,电话,名片,职务,来源,销售线索详情,线索主来源（主管道）,CRM核心需求,预计使用端口数量,端口数档位,所属行业,二级行业,CRM三大行业,二级行业-2022,三级行业-2022,四级行业-2022,行业旅程-2022,企业规模,销售团队人数,所属区域,销售模式,是否为关键联系人,跟进中线索状态,客户运营类型,市场活动名称唯一性ID,市场活动名称,营销活动唯一性ID,营销活动,是否为新进线索,参保人数,推广人,备注,销售姓名,最后跟进时间（新）,合作伙伴（计算）,参会情况,企业CRM软件使用情况,伙伴企业唯一性ID,伙伴企业,三级行业价值链经营目标库,伙伴名称,行业部定级,市场活动类型,销售记录填报最早时间,CSM负责人,战区,轮巡状态,营销推广来源唯一性ID,营销推广来源,ABM营销指认销售,手机归属市,预期上线时间,微信号,设备信息,注册资金-新,渠道,就职企业,销售总监,相关SDR,销售人员退回原因,待培育原因,辅助字段-分配CSM负责人,CTA来源,原始线索数据（SDR）唯一性ID,原始线索数据（SDR）,线索无效原因,行为积分差值,IP地址,市场活动爆破手,联系人查重,下次跟进要点,访客id,访问地址,您是否可以协助拉微信群？,地址,临时用户id,是否有SaaS从业经历？,是否内容培育,关键词,落地页名称唯一性ID,落地页名称,市场活动参会名单编号,回放状态-统计字段,线索转移线索池原因,官网访问来源网址,细分类目（统计）,推广计划,手机归属省,转MQL周期,ABM目录营销客户标记,落地页URL,职工参保人数,线索类别,汇聚查重,推广渠道,转MQL时间,观看状态,推荐渠道,线索等级,是否为挖掘机行业,刷数据标记,回放时长（分钟）,观看状态-统计字段,行业,城市,原始线索数据（线上）唯一性ID,原始线索数据（线上）,营销标签,最终沟通结果,企微客户唯一性ID,企微客户,销售线索计划任务更新标记,签到状态-统计字段,企业账号,客户最后一次跟进时间是否超过6个月,是否ABM培育,ABM目录客户级别,自增编号,MQL分配部门,销售标记为无效时间（最新一次）,所属供应商唯一性ID,所属供应商,官网线索来源站点,搜索词,销售退回线索池时间（最新一次）,营销关键词唯一性ID,营销关键词,是否培育转出,销售人员,企业人数,是否存在重复数据,线索提供人,预算明确,MQL分配人员,设备类型,推广单元,手机归属国家,线索提供方唯一性ID,线索提供方,官网线索来源渠道,首次转MQL时间,转换周期,,签到状态,生命状态,投放推广渠道,企业库唯一性ID,企业库,您是否可以协助邀约见面？,官网访问来源网址-多行,企业微信UserId,省份,退回前行为积分,客户查重,企业微信认证企业,客户是否在公海中,神策用户id,参保人数-新,提供人所属公司,下次跟进时间,BD合作伙伴唯一性ID,BD合作伙伴,用户状态,是否是钉钉注册企业,营销通试用产品名称,对方明确有CRM需求？,预计收回时间,二级-市场负责人,观看时长（分钟）,转MQL时间-系统,剩余保有时间（小时）,归属部门,线索细分来源,推荐人手机号,认识对方关键决策人的时长？,企业库-战区,线索有效性,您如何了解到本次活动的？,贵公司是否是纷享销客CRM用户,行为积分,内容培育参与次数,是否有SaaS销售经验？,线索提供人手机,回放状态,关键词投放计划唯一性ID,关键词投放计划,市场负责人,线索阶段变更时间,商机：企业名称,渠道细分来源,推广方式,原始线索数据（转介绍）唯一性ID,原始线索数据（转介绍）,普通成员-只读,普通成员-读写,定位,国家,省,市,区,详细地址,企业库1.0唯一性ID,企业库1.0,客户画像唯一性ID,客户画像,细分类目,线索阶段,线索评分,工商注册,转换概率（%）,归集到的线索唯一性ID,归集到的线索,预计使用端口数量区间,线索培育次数-线索培育记录,状态-线索培育记录,培育形式-线索培育记录,培育结果-线索培育记录,创建人,创建时间,负责人,负责人主属部门,负责人变更时间,合作伙伴_唯一性ID,合作伙伴,外部负责人,外部来源,线索池,分配管理员,领取/分配时间,处理结果,转换时间,是否超时,最后跟进人,最后跟进时间,最后修改人,最后修改时间,状态,锁定状态,业务类型（必填）
+此部分暂时采用魔数智擎的方案，计算偏离值（魔数自己起的名字搜索不到）
 
-为全部字段名称删除2w8条数据中非空值数量小于100的字段，包含线索转换结果的字段，与线索转换无关的字段后，字段所含枚举值过多无法分析的字段，具有信息完全涵盖关系的变量只保留信息量高的，最后保留了14个字段
+偏离值计算公式：
 
-唯一性ID（必填）,来源,预计使用端口数量,所属行业,二级行业,二级行业-2022,企业规模,销售团队人数,市场活动类型,行为积分差值,线索等级,省,工商注册,业务类型（必填）
+loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss>1 else (1-loss)
 
-并增加是否存在职务，以及整体信息空白数两个字段，转换企业规模为可体现大小关系的数值，销售团队人数同理。
+参考[目标特征与所有特征的线性相关表.csv](./目标特征与所有特征的线性相关表.csv)
 
-### 平台模型表现初步对比：
+可以发现界限并不明显，不好划分必定去除的界限。为防止误删暂定0.98为分界线**因此存疑，需要另寻符合需求的算法，或者需要在类别编码时，将数量少的类别进行一些融合。**
 
-|                    | 魔数智擎                                                     | H2O autoML                                                   | tensorflow                                                   |
-| ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| 优势               | 快速搭建 GBM，RF，DAT等机器学习算法，并提供一定的autoML优化超参数的能力。可以导入本地算法（环境依赖包只能选支持的，常用的包均包含在内） | 提供神经网络算法，5种较优的算法，不提供最基本的算法如CART决策树，自动优化超参数，本身是Apache开源协议。支持多模型合并输出。 | 自由度最大，有很多新算法（表现不一定好），调节度最高，提供上述平台所有的机器学习基础算法包，可自由设计合并算法。 |
-| 劣势               | 平台本身不提供组合多模型的能力。不提供一键式训练多模型并排序供选择。不提供快速搭建神经网络的选项。 | 使用较为复杂，算法较少（相对于魔数智擎，但也有魔数没有的算法，魔数中包含大量基础弱学习器算法不能直接使用） | 适合深度学习网络搭建，对于机器学习算法帮助不大。             |
-| 目前尝试的模型表现 | 最优算法Magic GBM AUC 80.3%                                  | 最优算法 综合5种模型的StackedEnsembleAUC 80.1%               | 深度神经网络（出现严重过拟合）AUC 73.2%                      |
+### 1.1.2 根据特征完整度进行去除
+
+参考[目标特征与所有特征的线性相关表.csv](./目标特征与所有特征的线性相关表.csv) 
+
+界限同样难以划分，因此应当暂时定界限为0.001，因为要删除的是信息含量低的，一般情况下在模型重要度计算时能删除有关特征。
+
+### 1.1.3 根据是否强相关去除
+
+对比线性相关算法
+
+| 分析方法 | 数据类型                           | 数据分布 | 数据间的关系 |
+| -------- | ---------------------------------- | -------- | ------------ |
+| pearson  | 数值和数值                         | 正态分布 | 线性         |
+| spearman | 数值和数值；数值和分类；分类和分类 | 不做要求 | 不做要求     |
+| kendall  | 数值和数值；数值和分类；分类和分类 | 不作要求 | 不做要求     |
+
+*pearson算法的数据对分类类型进行编码
+
+锁定状态、线索阶段、转换周期，三个与状态强相关字段
+
+实验结果[目标特征与所有特征的线性相关表.csv](./目标特征与所有特征的线性相关表.csv)
+
+| 分析方法 | 实际表现                                                     |
+| -------- | ------------------------------------------------------------ |
+| pearson  | 排名靠前的几个值均不为强相关字段                             |
+| spearman | 大于80%的值包含全部三个强相关，且分界线较为明显，但是也包含（线索类别）高度空缺会导致相关度变高 |
+| kendall  | 与spearman类似分界线同样为80%，计算开销更大                  |
+| 自编写LC | 大于99%，一定是包含目标信息的字段，分界线不会有误分情况      |
+
+综合结论，因为字段中含有大量的空缺特征，因此无法划分分界线保障结果，因此针对空缺信息提取的线性相关算法，简称LC，linear_categorical，此算法得出的是特征与目标特征的信息是否为包含关系，（例如唯一id一定包含其他所有信息即可以通过唯一id去确定市场类型的值）因为LC算法的分界线为99%误分类几率小因此选用自编算法
+
+### 1.1.4 去除日期类型变量
+
+因为日期类型变量不应当作为线索评分的参考，未来如果有公司近况舆论分析模块，才考虑使用日期作为输入变量。
+
+### 1.1.5 去除含人名信息的变量
+
+此类数据有可能会让模型效果更好，但是评分系统应当作为线索本身的描述而非销售的因素，一般情况下人名信息为联系人or分配销售信息这部分应当去除单独考虑，高成交率联系人不需要系统帮助销售记录。
+
+### 1.1.6 去除（初步试训模型）贡献值为0的特征
+
+特征的贡献值是由树模型分叉的算法信息熵（简化为基尼指数）计算而来，一些超参数的剪枝会使得贡献变小，因此初步试训模型时强化学习能力，不考虑过拟合的情况下得出贡献值为0的特征，对于剪枝后的模型一定无用，
+
+注：此处参考基础知识介绍中cart决策树的介绍，剪枝是为了增加模型泛化性。
+
+### 1.1.7 去除同含义变量
+
+存在同含义变量但是，细分程度不同，例如一级产业二级产业，需人工判断去除
+
+### 1.1.8 识别特征启用时间，去除中途新建特征
+
+训练集选用1-7月的数据，但是存在一个字段4月份才开始使用（一直存在），应当去除保证空缺值有含义，或进行特殊编码也可。
+
+### 1.1.9 全局刷新改变的计算字段
+
+若模型训练数据后，由于评分规则发生变化（如线索等级这个字段），导致模型性能下降
+
+
+
+## 1.2 提供特征去除推荐
+
+1.1.7和1.1.8是否应当让客户选择是否删除
+
+
+
+参考、线性相关度、完整度（空缺度）、偏离值、模型贡献值。
+
+## 1.3 人为剔除无关特征
+
+给出说明文档如：删除信息填写在线索转化之后的字段。
+
+## 1.4 特征融合
 
 
 
 
 
-## 现存可能的问题
+# 2 类别特征编码
 
-1. 模型轮数并未选择最优轮数
+## 2.1 简单连续正整数编码
+
+## 2.2 融合语义的特征编码
 
 
 
+# 3 超参数优化
+
+## 3.1 网格搜索
+
+## 3.2 贝叶斯搜索
 
 
-流程：
 
-1.初步筛选特征
+# 4 其他
 
-2.划分训练集和测试集
+## 4.1 模型是否可用评判
 
-3.训练集表现分析（是否存在过拟合）如果存在过拟合，则考虑限制较高的模型，如果训练集表现一般则继续优化超参数，如果训练集表现过差，合并训练集和测试集再次尝试，不具备参考价值
+psi评价
+
+## 4.2 训练集、测试集划分方法
+
+## 数据量对于上述过程的影响
 
