--- a/意向打标签/汇总.md
+++ b/意向打标签/汇总.md
@@ -171,16 +171,25 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 # 5 实验记录
 
+## 5.1 样本数量验证
+
+测试集选用2023年数据
+
+
+
 fs选定的字段 
 
-['企业性质', '来源', '线索主来源（主管道）', '预计使用端口数量', '所属行业', 'CRM三大行业', '二级行业-2022',
-       '三级行业-2022', '四级行业-2022', '行业旅程-2022', '企业规模', '营销活动', '参保人数', '参会情况',
-       '市场活动类型', 'CSM负责人', 'ABM营销指认销售', '注册资金-新', '相关SDR', 'CTA来源', '线索无效原因',
-       '市场活动爆破手', '联系人查重', '落地页名称', '回放状态-统计字段', '线索转移线索池原因', '细分类目（统计）',
-       '推广计划', '手机归属省', '转MQL周期', 'ABM目录营销客户标记', '职工参保人数', '汇聚查重', '观看状态',
-       '推荐渠道', '是否为挖掘机行业', '回放时长（分钟）', '观看状态-统计字段', '营销标签', '签到状态-统计字段',
-       '是否ABM培育', 'MQL分配部门', '官网线索来源站点', '是否存在重复数据', '预算明确', '设备类型', '推广单元',
-       '手机归属国家', '官网线索来源渠道', '签到状态', '退回前行为积分', '客户查重', '观看时长（分钟）', '归属部门',
-       '企业库-战区', '线索有效性', '贵公司是否是纷享销客CRM用户', '行为积分', '回放状态', '推广方式', '国家', '省',
-       '客户画像', '细分类目', '工商注册', '预计使用端口数量区间', '负责人主属部门', '合作伙伴', '线索池', '分配管理员',
-       '最后修改人', '业务类型（必填）']
+['企业性质', '来源', '线索主来源（主管道）', '预计使用端口数量', '所属行业', 'CRM三大行业', '二级行业-2022','三级行业-2022', '四级行业-2022', '行业旅程-2022', '企业规模', '营销活动', '参保人数', '参会情况','市场活动类型', '注册资金-新', '相关SDR', 'CTA来源', '线索无效原因', '联系人查重', '落地页名称', '回放状态-统计字段', '线索转移线索池原因', '细分类目（统计）','推广计划', '手机归属省', '转MQL周期', 'ABM目录营销客户标记', '职工参保人数', '汇聚查重', '观看状态','推荐渠道', '是否为挖掘机行业', '回放时长（分钟）', '观看状态-统计字段', '营销标签', '签到状态-统计字段','是否ABM培育', 'MQL分配部门', '官网线索来源站点', '是否存在重复数据', '预算明确', '设备类型', '推广单元','手机归属国家', '官网线索来源渠道', '签到状态', '退回前行为积分', '客户查重', '观看时长（分钟）', '归属部门','企业库-战区', '线索有效性', '贵公司是否是纷享销客CRM用户', '行为积分', '回放状态', '推广方式', '国家', '省', '客户画像', '细分类目', '工商注册', '预计使用端口数量区间', '负责人主属部门', '合作伙伴', '线索池', '业务类型（必填）']
+
+
+
+除特征自动退提出外人工剔除了：
+
+是否超时、（在真实应用时未填写的字段）
+
+线索评分、线索等级（人工打分系统、影响目前销售分配）
+
+企业CRM软件使用情况（空白率过高）
+
+合作伙伴（计算）（每一类别线索过少）
+
