--- a/意向打标签/汇总.md
+++ b/意向打标签/汇总.md
@@ -36,7 +36,7 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 *pearson算法的数据对分类类型进行编码
 
-锁定状态、线索阶段、转换周期，三个与状态强相关字段，（需要删除的字段还有，是否超时）
+锁定状态、线索阶段、转换周期，三个与状态强相关字段，
 
 实验结果[目标特征与所有特征的线性相关表.csv](./目标特征与所有特征的线性相关表.csv)
 
@@ -51,7 +51,7 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 ### 1.1.4 去除日期类型变量
 
-因为日期类型变量不应当作为线索评分的参考，未来如果有公司近况舆论分析模块，才考虑使用日期作为输入变量。
+因为日期类型变量不应当作为线索评分的参考，暂时无法自动利用日期信息
 
 ### 1.1.5 去除含人名信息的变量
 
@@ -61,19 +61,9 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 ### 1.1.6 去除（初步试训模型）贡献值为0的特征
 
-特征的贡献值是由树模型分叉的算法信息熵（简化为基尼指数）计算而来，一些超参数的剪枝会使得贡献变小，因此初步试训模型时强化学习能力，不考虑过拟合的情况下得出贡献值为0的特征，对于剪枝后的模型一定无用，
+选取训练模型参数为 决策树数量=200，每次随机选取30%的特征进行计算。
 
-注：此处参考基础知识介绍中cart决策树的介绍，剪枝是为了增加模型泛化性。
-
-### 1.1.7 去除同含义变量
-
-存在同含义变量但是，细分程度不同，例如一级产业二级产业，需人工判断去除
-
-### 1.1.8 识别特征启用时间，去除中途新建特征
-
-训练集选用1-7月的数据，但是存在一个字段4月份才开始使用（一直存在），应当去除保证空缺值有含义，或进行特殊编码也可。
-
-### 1.1.9 全局刷新改变的计算字段（去除干扰项特征）
+贡献值为0证明这200棵树中没有一个节点选择使用这个特征，即这个特征相较于任意随机抽取的30%特征都不具备任何信息，对训练毫无帮助
 
 由于业务逻辑改变或销售填写规则不统一，存在一些加入反而会使效果变差的特征，例如
 
@@ -81,47 +71,97 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 若模型训练数据后，由于评分规则发生变化（如线索等级这个字段），导致模型性能下降
 
+### 1.1.7 去除数据库中后填写的变量
+
+此部分目前还未测试，同空缺性实验证明了假设存在少量的后填写变量，模型依旧拥有分类能力，例如原先评分90%，空缺后评分70%，但仍然能分离低价值线索和已转换线索。
+
+模型本身的分布
+
+![1687944884971](image/1687944884971.png)
+
+![1687945437762](image/1687945437762.png)
+
+final_score= 0.9660319834 auc= 0.9949506758  mse= 0.0181780947  拟合曲线偏差度:0.0320763016  正偏差度:0.0453396684  负偏差度:0.0295285071  recall:0.9641700842  f1:0.9326652051   xgboost-dartval
+
+人为将10个字段置为空之后的分布
+
+![1687945056945](image/1687945056945.png)
+
+![1687945356193](image/1687945356193.png)
+
+final_score= 0.9466438680 auc= 0.9875567263  mse= 0.0253130310  拟合曲线偏差度:0.0415895615  正偏差度:0.0620059390  负偏差度:0.0377271318  recall:0.9227282538  f1:0.8984867591   xgboost-dartval
 
 
-## 1.2 提供特征去除推荐
 
-1.1.7和1.1.8是否应当让客户选择是否删除
+## 1.2 提供特征去除推荐，人为剔除无关特征
+
+### 1.2.1 去除同含义变量
+
+存在同含义变量但是，细分程度不同，例如一级产业二级产业，需人工判断去除
+
+### 1.2.2 产生变换的变量
+
+例1：训练集选用1-7月的数据，但是存在一个字段4月份才开始使用（一直存在），应当调整训练集日期范围，或删除该字段。
+
+例2：字段a与字段同义，在6月之前使用a字段，6月之后使用b字段。提供训练模型是合并字段并人为选择使用模型时输入字段名称。
+
+### 1.2.3 提供空缺度等数据信息人为去除
+
+参考、线性相关度、完整度（空缺度）、偏离值、模型贡献值
 
 
 
-参考、线性相关度、完整度（空缺度）、偏离值、模型贡献值。
+## 1.3 特征融合
 
-## 1.3 人为剔除无关特征
+注：以2022年数据作为训练集，2023年作为测试集，特征工程算法均无明显效果（注：因为模型分类表现已经很好了）
 
-给出说明文档如：删除信息填写在线索转化之后的字段。
+以2020年数据作为训练集，添加信息空白数，能使结果显著提升（使用的特征数量过少）
 
-## 1.4 特征融合
 
-## 1.5 试验结果
 
-### 去除特征试验结果：
+## 1.4 试验结果
 
-![1687661455154](image/1687661455154.png)
+除特征自动退提出外人工剔除了：
 
-![1687671651071](image/1687671651071.png)
+是否超时、（在真实应用时未填写的字段）
 
-![1687682920620](image/1687682920620.png)
+线索评分、线索等级（人工打分系统、影响目前销售分配）
+
+企业CRM软件使用情况（空白率过高）
+
+合作伙伴（计算）（每一类别线索过少
 
 # 2 类别特征编码
 
-## 2.1 简单连续正整数编码
+## 2.1 目前选取编码
 
-分配管理员 系统、空白、其他  注：目前模型编码存在问题？？？没有系统
+按照类别数量从高到低排序，依次编码
 
-## 2.2 融合语义的特征编码
+为的是让数量高的类别直接不要夹杂数量低的导致信息熵变换不明显从而未被区分
 
+可选独热码，哑编码（这两类都会扩展输入模型的特征，在决策树建树时选择的随机挑选特征，以及一棵树中最大交互特征数等超参数会失效，丧失实际意义，实验的表现并不好因此未选用）
 
+为空置为0，编码从1开始。
+
+## 2.2  改进空间
+
+使用词向量，使得语义相近的编码相近（意义不大，目前模型效果已够高）
+
+## 2.2 可优化方向
 
 # 3 超参数优化
 
 ## 3.1 网格搜索
 
 ## 3.2 贝叶斯搜索
+
+经过测试，上两种时间差距不明显，需要多家数据进行测试，目前已完成相关代码等待测试
+
+注：由于模型特征数量高需要随机抽取部分特征建立决策树，因此随机种子对结果的影响也很大超过超参数的影响，给超参数优化提供了一定的迷惑性。
+
+
+
+
 
 
 
@@ -175,21 +215,8 @@ loss=log(变量非空数量)/log(2)/(变量类别数-1)     偏离度=0  if loss
 
 测试集选用2023年数据
 
-
-
-fs选定的字段 
-
-['企业性质', '来源', '线索主来源（主管道）', '预计使用端口数量', '所属行业', 'CRM三大行业', '二级行业-2022','三级行业-2022', '四级行业-2022', '行业旅程-2022', '企业规模', '营销活动', '参保人数', '参会情况','市场活动类型', '注册资金-新', '相关SDR', 'CTA来源', '线索无效原因', '联系人查重', '落地页名称', '回放状态-统计字段', '线索转移线索池原因', '细分类目（统计）','推广计划', '手机归属省', '转MQL周期', 'ABM目录营销客户标记', '职工参保人数', '汇聚查重', '观看状态','推荐渠道', '是否为挖掘机行业', '回放时长（分钟）', '观看状态-统计字段', '营销标签', '签到状态-统计字段','是否ABM培育', 'MQL分配部门', '官网线索来源站点', '是否存在重复数据', '预算明确', '设备类型', '推广单元','手机归属国家', '官网线索来源渠道', '签到状态', '退回前行为积分', '客户查重', '观看时长（分钟）', '归属部门','企业库-战区', '线索有效性', '贵公司是否是纷享销客CRM用户', '行为积分', '回放状态', '推广方式', '国家', '省', '客户画像', '细分类目', '工商注册', '预计使用端口数量区间', '负责人主属部门', '合作伙伴', '线索池', '业务类型（必填）']
+![1687953009525](image/1687953009525.png)
 
 
 
-除特征自动退提出外人工剔除了：
-
-是否超时、（在真实应用时未填写的字段）
-
-线索评分、线索等级（人工打分系统、影响目前销售分配）
-
-企业CRM软件使用情况（空白率过高）
-
-合作伙伴（计算）（每一类别线索过少）
 
