--- a/意向打标签/问题.md
+++ b/意向打标签/问题.md
@@ -6,3 +6,36 @@
 
 营销标签字段，是否可用
 
+
+
+
+
+
+
+参数1 未参加的特征
+
+
+
+
+
+['来源', '四级行业-2022', '行业旅程-2022', '营销活动', '市场活动类型', 'CTA来源', '落地页名称', '回放状态-统计字段', '推广计划', '手机归属省', '转MQL周期', '观看状态', '回放时长（分钟）', '观看状态-统计字段', '营销标签', '签到状态-统计字段', '是否存在重复数据', '推广单元', '手机归属国家', '签到状态', '客户查重', '线索有效性', '贵公司是否是纷享销客CRM用户', '推广方式', '国家', '省', '细分类目', '行业部定级', '业务类型（必填）']
+
+
+
+['预计使用端口数量', '所属行业', '二级行业-2022', '四级行业-2022', '企业规模', '营销活动', 'CTA来源', '落地页名称', '回放状态-统计字段', '细分类目（统计）', '推广计划', 'ABM目录营销客户标记', '汇聚查重', '观看状态', '推荐渠道', '回放时长（分钟）', '观看状态-统计字段', '签到状态-统计字段', '是否ABM培育', '是否存在重复数据', '设备类型', '推广单元', '手机归属国家', '观看时长（分钟）', '归属部门', '回放状态', '推广方式', '省', '细分类目', '合作伙伴', '行业部定级']
+
+'四级行业-2022', '落地页名称'，'回放状态-统计字段'
+
+
+
+```python
+model = xgb.XGBClassifier(learning_rate=0.4, n_estimators=30, max_depth=5, min_child_weight=0.8, subsample=0.8,                          colsample_bytree=0.2, colsample_bylevel=0.8, colsample_bynode=0.5,random_state = 1,objective="binary:logistic",                          booster='dart', eval_metric=["auc"], rate_drop=0.2, skip_drop=0.5, n_jobs=0                          , scale_pos_weight=weight, )
+```
+
+final_score= 0.9660319834 auc= 0.9949506758  mse= 0.0181780947  拟合曲线偏差度:0.0320763016  正偏                     差度:0.0453396684  负偏差度:0.0295285071  recall:0.9641700842  f1:0.9326652051   xgboost-dartval
+
+
+
+
+
+['推广计划', '观看状态', '回放时长（分钟）', '签到状态-统计字段', '签到状态', '观看时长（分钟）']
